# hausse

./: .gitignore  .gitlab-ci.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  index.html  requierements.txt  requirements.txt  setup.cfg
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 01_Bug_report.md  02_Feature_request.md  03_Plugin_request.md
.github/workflows/: pylint.yml
.gitlab/pipelines/: blueprints.gitlab-ci.yml  build.gitlab-ci.yml  distribution.gitlab-c.yml  docs.gitlab-ci.yml  pylint.gitlab-ci.yml  pytest.gitlab-ci.yml  reference.gitlab-ci.yml
.gitlab/pipelines/blueprints/: notes-extractions.gitlab-ci.yml  portfolio.gitlab-ci.yml
.gitlab/pipelines/dists/: package-registry.gitlab-ci.yml  pypi.gitlab-ci.yml
blueprints/notes-extraction/: README.md  notes-extraction.py
blueprints/notes-extraction/data/: index.md
blueprints/notes-extraction/data/notes/: Notes.csv
blueprints/notes-extraction/layouts/: note.hbs  notes.hbs
blueprints/portfolio/: build.py
blueprints/portfolio/src/: index.md
blueprints/portfolio/src/links/: github.md  linkedin.md  stackoverflow.md  twitter.md
blueprints/portfolio/src/projects/: 1.md  2.md  4.md
blueprints/portfolio/src/skills/: c.md  (+4 more)
docs/: conf.py  plugins.rst  reference.rst
docs/src/: conf.py  index.rst  introduction.rst  kickstart.rst  plugins.rst  production.rst  wip.rst
examples/notes-extraction/: hausse.json  notes-extraction.py
examples/portfolio/: README.md  build.py  hausse.json
examples/portfolio/layouts/: layout.hbs
examples/portfolio/src/: index.md
hausse/: __init__.py  __main__.py  hausse.py
hausse/lib/: __init__.py  element.py  plugin.py  project.py  selector.py
hausse/plugins/: __init__.py  assets.py  csv_expand.py
hausse/plugins/data/: markdown.py
hausse/plugins/elements/: collection.py  drop.py  index.py  keep.py  metadata.py  relations.py
hausse/plugins/layout/: discover_partials.py  handlebars.py  layouts.py
hausse/plugins/metadata/: markdown_metadata.py  metadata.py  metadata_markdown.py
hausse/utils/: __init__.py  constants.py  functions.py
test/: test_hausse.py
test/libs/: test_element.py  test_selector.py
test/plugins/: test_collections.py  test_drop.py
tests/: test_hausse.py
tests/libs/: test_selector.py
tests/plugins/: test_collections.py  test_drop.py  test_keep.py  test_markdown.py  test_metadata.py  test_relations.py
tests/utils/: methods.py  test_functions.py
(+20 files in other folders)
