[metadata]
name = hausse
version = 0.1.1
author = André Nasturas
author_email = andre.nasturas@delfosia.net
description = Plugin-based static project generator
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/andrenasturas/hausse
project_urls =
    Bug Tracker = https://github.com/andrenasturas/hausse/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9