[bumpversion]
current_version = 0.2.3
commit = True
tag = True
sign_tags = True
message = 🔖 Bump {current_version} → {new_version}
allow_dirty = True

[bumpversion:file:setup.py]
[bumpversion:file:hausse/__init__.py]
[bumpversion:file:soscleaner/soscleaner.py]
[bumpversion:file:scripts/soscleaner]
[bumpversion:file:soscleaner.spec]

[metadata]
name = hausse
version = attr: hausse.__version__
author = André Nasturas
author_email = andre.nasturas@delfosia.net
description = Plugin-based static project generator
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/andrenasturas/hausse
project_urls = 
	Bug Tracker = https://github.com/andrenasturas/hausse/issues
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9
