[bumpversion]
current_version = 0.2.6
commit = True
tag = True
sign_tags = True
message = 🔖 Bump {current_version} → {new_version}
allow_dirty = True

[bumpversion:file:hausse/__init__.py]

[metadata]
name = hausse
version = attr: hausse.__version__
author = André Nasturas
author_email = andre.nasturas@delfosia.net
description = Plugin-based static project generator
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/andrenasturas/hausse
project_urls = 
	Bug Tracker = https://github.com/andrenasturas/hausse/issues
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9

[flake8]
per-file-ignores = __init__.py:F401

[mypy]

[mypy-PIL.*]
ignore_missing_imports = True
